Changed Masonry to be loaded via JS, fied overlapping images issue by waiting for images to load before initilising

--- a/style.css
+++ b/style.css
@@ -117,3 +117,7 @@ div.content {
 
 	max-width: 100%;
 }
+
+#container {
+
+}
